added new lines and update of my progress

--- a/README
+++ b/README
@@ -1,1 +1,11 @@
 Okay i made my first file today .
+<br>
+okay i have learned about pull and push req 
+<br>
+push is you display from local to online repo 
+<br>
+and pull is showing it to chef and then confirming.
+<br>
+push is basically commiting and adding
+<br>
+and pull is showing and merging it ... simpleeeeeeeee
